--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		</div>
 		<div class="panel panel-default">
 			<div class="panel-heading">
-				<h3 class="panel-title">GIPHY</h3>
+				<h3 class="panel-title">GIPHY Scroll to Right</h3>
 			</div>
 			<div class="panel-body" id="result">
 				
